# SweInfinite

./: .gitignore  README.md  com.swe-infinite.plist  pipeline.db-shm  pipeline.db-wal  pyproject.toml  swe_synth.py
apps/ui/src/app/: page.test.tsx
dataset/: VetEngineer__Youtube-AI-Agent-Agency-19.json  mdhaarishussain__chaos-kitten-85.json  scholl-lab__variantcentrifuge-69.json
results/: eval_20260213_173634.json  eval_20260213_173925.json  eval_20260213_174410.json  eval_20260213_175349.json
src/icons/EmojiEvents/: EmojiEventsIcon.test.tsx
src/lib/: scriptGenerator.test.ts  swipeFileGenerator.test.ts
src/swe_infinite/: __init__.py  __main__.py  cli.py  db.py  decontamination.py  docker_env.py  eval.py  filters.py  gharchive.py  hippius.py  language_support.py  paths.py  pipeline.py  quality_scorer.py  recipe_generator.py  repo_ops.py  repo_quality.py  task_store.py  test_generator.py  validator.py  versioning.py
tests/: api-reference-security.test.ts
