[project]
name = "swe-infinite"
version = "0.2.0"
description = "Validated, quality-scored SWE benchmark task factory"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
full = [
    "datasets>=4.5.0",
    "pytest-json-report>=1.5.0",
]

[project.scripts]
swe-infinite = "swe_infinite.cli:main"
swe-eval = "swe_infinite.cli:eval_main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swe_infinite"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = ["workspace/", "dataset/", "results/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["swe_infinite"]
